# news_db

./: .gitignore  README.md  api_server.py  config.py  convert_print_to_logger.py  daliysummary.txt  fetch_incremental_llm.py  fetch_incremental_llm_new.py  generate_daily_summary.py  news_catogory.txt  pyproject.toml  render.yaml  requirements.txt  test.ipynb  test_fetch_llm_for_new_databse.py  test_multi_source.py  test_process_all.py  trigger_remote.py
.claude/: CLAUDE.md
api/: __init__ .py  fetch_incremental_llm_new.py  generate_company_summary.py  generate_daily_summary.py  recategorize.py
api/src/: companies.py  config.py
database_v2/: README.md  config.py  process.py
database_v2/db/: __init__.py  stock_process_db.py
database_v2/processors/: __init__.py  classifier.py  (+1 more)
db/: daily_highlights.py  stock_news.py
docs/: CODE_CLEANUP_2025-11-22.md  CONFIGURATION_GUIDE.md  DAILY_SUMMARY_GUIDE.md  DEPLOYMENT.md  FIX_Database_Docs.md  GET_Requests.json  LOCAL_TRIGGER_SETUP.md  PROJECT_STRUCTURE.txt  QUICK_API_REFERENCE.md  RECORD_Change.md  crontab_setup.txt
fetchers/: __init__.py  general_news_fetcher.py  polygon_fetcher.py
models/: raw_news.py
processors/: __init__.py  llm_news_processor.py  news_processor.py
services/: __init__.py  daily_summarizer.py  llm_categorizer.py
sql_query_archive/: alter_add_fetch_source.sql  alter_add_secondary_category.sql  category_check.sql  check_failed_items.sql  create_daily_highlights_table.sql  schema.sql
src/: config.py
storage/: fetch_state_manager.py
tests/: test_model_connection.py  test_model_quick.py
(+25 files in other folders)
